Add subject and test menus with placeholder names

--- a/NexusApp/NexusApp.vcxproj
+++ b/NexusApp/NexusApp.vcxproj
@@ -137,12 +137,18 @@
     <ClCompile Include="buttons.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="menu.cpp" />
+    <ClCompile Include="questions.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="app.h" />
     <ClInclude Include="buttons.h" />
     <ClInclude Include="main.h" />
     <ClInclude Include="menu.h" />
+    <ClInclude Include="questions.h" />
+    <ClInclude Include="score.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <Text Include="questions.txt" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
